# tap-api-python

./: README.md  pyproject.toml
example/: example.py  example_campaign_api.py  example_forensics_api.py  example_siem_api.py  example_threats_api.py  example_url_decode_api.py  example_vap_api.py
src/tap_api/common/: __init__.py
src/tap_api/common/campaign/: filters.py  time_interval.py
src/tap_api/common/people/: filters.py
src/tap_api/common/siem/: Filters.py  filters.py
src/tap_api/v2/: Client.py  __init__.py
src/tap_api/v2/endpoints/: __init__.py
src/tap_api/v2/endpoints/campaign/: campaign.py  campaign_data.py  campaign_info.py  campaign_member.py  campaign_metadata.py  campaign_summary.py  campaigns.py  ids.py
src/tap_api/v2/endpoints/forensics/: aggregate.py  evidence.py  evidence_types.py  forensics.py  platform.py  report.py
src/tap_api/v2/endpoints/people/: identity.py  people.py  threat_family.py  threat_statistics.py  user.py  vap.py  vap_info.py  vap_summary.py  vapdata.py  vaps.py
src/tap_api/v2/endpoints/siem/: Siem.py  all.py  blocked.py  clicks.py  delivered.py  issues.py  message_event.py  messages.py  permitted.py  siem_data.py  (+1 more)
src/tap_api/v2/filters/: siem_options.py  vap_options.py
src/tap_api/web/: Collection.py  CollectionResource.py  Dictionary.py  DictionaryResource.py  ErrorHandler.py  Resource.py  Resources.py  __init__.py  collection.py  collection_resource.py  dictionary.py  dictionary_collection.py  dictionary_resource.py  error_handler.py  filter_options.py  parameter.py  resource.py  resources.py  response_wrapper.py
(+18 files in other folders)
