[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]
include = ["tap_api"]
namespaces = true

[project]
name = "tap-api"
version = "1.0.0"
readme = "README.md"
description = "Targeted Attack Protection Python API Package"
license = { text = "MIT" }
requires-python = ">3.9"
dependencies = [
    'requests'
]

[project.urls]
repository = "https://github.com/pfptcommunity/tap-api-python"
homepage = "https://help.proofpoint.com/Threat_Insight_Dashboard/API_Documentation"
#documentation = "https://github.com/pfptcommunity/tap-api-python"
#changelog = "https://github.com/pfptcommunity/tap-api-python"
